Update basic blog config

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://mmcfarland.github.io/bayntonhill
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Baynton Hill Neighbors Association
+subtitle: 
+author: BHNA
 simple_search: http://google.com/search
-description:
+description: A small community organization in the process of becoming an RCO in the Wister section of East Gemantown
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
