--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ date_format: "ordinal"
 subscribe_rss: /bayntonhill/atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: info@bayntonhill.org
 
 # ----------------------- #
 #    Jekyll & Plugins     #
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /bayntonhill
+root: /
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public/bayntonhill
